# NarDialPy

./: .gitignore  CITATION.cff  README.md  all_sessions_history.json  conversation_state.json  pyproject.toml
.github/workflows/: publish.yml  pytest.yml
RobotDetective/Episode 1/: Scene_1_Intro.json  Scene_2_Toon_Rami.json  Scene_3_Trudy.json
assets/dialogs/: dialogs.json
conf/dialogs/: dialogs.json
docs/: DEVELOPER_README.md
examples/: branching_dialogflow_dialogs.json  demo_branching_dialogflow.py  demo_dialog_with_characters_elevenlabs.py  demo_dialog_with_characters_google_tts.py  demo_dialog_with_characters_googletts.py  demo_elevenlabs_llm.py  demo_general_conversation.py  demo_improv_conversation.py  demo_pepper_tablet.py  demo_pepper_tablet_screen.py  demo_screen_provider.py  demo_simple_LLM_dialog.py  demo_structured_conversation.py  dialog_with_characters.json  dialog_with_characters_elevenlabs.json  dialog_with_characters_google_tts.json  dialog_with_characters_googletts.json  dialogs.json  elevenlabs_llm_dialogs.json  improv.json  improvisation_graph.mmd  multi_agent_dialogs.json  screen_demo_dialogs.json  structured_conversation_dialogs.json  system_prompts.json
examples/dialog_json/: demo_pepper_tablet.json  demo_screen_dialogs.json  dialogs.json  simple_llm_dialogs.json
participants/: 1.json  6.json
robotstories_en/chitchat/: binaire_getallen.json  dagdromen_beroep.json  dagdromen_sport.json  draadjesschool.json  huisdier.json  lievelingsdier.json  lievelingseten.json  lievelingskleur.json  luister_naar_blaf.json  luister_naar_droom_blaf.json  plaats_in_de_natuur.json  recall_lievelingseten_pizza.json  robot_willen_zijn.json  ruimterobots.json  (+1 more)
scripts/: install-hooks.sh
src/: 1.json  2.json  MoveObject.py  __init__.py  all_sessions_history.json  app.js  configs.py  conversation_agent.py  conversation_state.py  demo_general_conversation.py  dialog.py  dialog_logic.py  dialogs.py  factory.py  historyclass.py  index.html  loader.py  mini_dialogs.py  moves.py  session.py  style.css
tests/: conftest.py  motion_test  test_agenda.py  test_agenda_items.py  test_agenda_slot_items.py  test_authoring.py  test_authoring_characters.py  test_authoring_factory.py  test_conversation_agent.py  test_conversation_state.py  test_conversation_summary.py  test_device_sources.py  test_dialog_agent_config.py  test_dialog_logic.py  test_dialog_registry.py  test_dialog_repeat.py  test_eligibility_rules.py  test_event_bus.py  test_immediate_interrupt.py  test_llm.py  test_mini_dialogs_extra.py  test_moves.py  test_preemptive.py  test_providers.py  test_resolver.py  test_screen_provider.py  test_session.py  test_session_manager.py  test_session_manager_async.py  test_session_plan.py  test_sic_adapter_assets.py  test_slot_bounds.py  test_structured_demo_examples.py  test_tts_cacher.py  test_tts_manager.py  test_user_model.py  test_voice_customization.py  test_wait_moves.py
(+116 files in other folders)
