[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nardial"
version = "0.1.8"
description = "Nardial Dialog System"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-only"

authors = [
  { name = "Mike Ligthart", email = "m.e.u.ligthart@vu.nl" }
]

maintainers = [
  { name = "Clara Fayyad" },
  { name = "Landon Brown"},
  { name = "Evelyne Prodescu" }
]

dependencies = [
  "social-interaction-cloud[dialogflow,google-tts,openai-gpt]"
]

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
