[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nardial"
version = "0.1.8"
description = "Nardial Dialog System"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-only"

authors = [
  { name = "Mike Ligthart", email = "m.e.u.ligthart@vu.nl" }
]

maintainers = [
  { name = "Clara Fayyad" },
  { name = "Landon Brown"},
  { name = "Evelyne Prodescu" }
]

dependencies = [
  "social-interaction-cloud",
  "pydantic>=2.0",
]

[project.optional-dependencies]
google-tts = ["social-interaction-cloud[google-tts]"]
elevenlabs = ["social-interaction-cloud[elevenlabs-tts]"]
dialogflow = ["social-interaction-cloud[dialogflow]"]
openai     = ["social-interaction-cloud[openai-gpt]"]
all        = ["nardial[google-tts,elevenlabs,dialogflow,openai]"]
dev        = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
