[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nardial"
version = "0.2.2"
description = "Nardial Dialog System"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-only"

authors = [
  { name = "Mike Ligthart", email = "m.e.u.ligthart@vu.nl" }
]

maintainers = [
  { name = "Clara Fayyad" },
  { name = "Landon Brown"},
  { name = "Evelyne Prodescu" }
]

dependencies = [
  "social-interaction-cloud",
]

[project.optional-dependencies]
google-tts = ["social-interaction-cloud[google-tts]"]
elevenlabs = ["social-interaction-cloud[elevenlabs-tts]"]
dialogflow = ["social-interaction-cloud[dialogflow]"]
openai = ["social-interaction-cloud[openai-gpt]"]
webserver  = ["social-interaction-cloud[webserver]"]
all = ["nardial[google-tts,elevenlabs,dialogflow,openai]"]
dev = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nardial.providers.screen" = ["web/templates/*.html", "web/static/*.css", "web/static/*.js"]
